--- a/index.html
+++ b/index.html
@@ -4,22 +4,33 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>个人简历</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 </head>
 
-<body style="margin-left: 8%;margin-top: 2%;">
-    <h2>联系方式</h2>
+<body style="margin-left: 8%;margin-top: 2%;font-size: 16px;font-family: '黑体'; ">
+
+    <style type="text/css">
+        b {
+            margin-left: 3%;
+        }
+        li{
+            margin: 1%;
+        }
+        h5{
+            margin-left: 3%;
+        }
+    </style>
+    <h3>联系方式</h3>
     <ul>
-        <li>邮箱: <a href="mailto:gjlove666@hotmail.com">gjlove666@hotmail.com</a></li>
+        <li >邮箱: <a href="mailto:gjlove666@hotmail.com">gjlove666@hotmail.com</a></li>
         <li>tel: 18503498358</li>
     </ul>
     <blockquote>
         <p>此简历原出处为在线简历，网址：<a href="http://cv.grj321.com">http://cv.grj321.com</a> (标蓝的可以点击跳转到指定页面)</p>
     </blockquote>
-    <h2>个人信息</h2>
+    <h3>个人信息</h3>
     <ul>
         <li>高荣基/男/1997.03</li>
         <li>本科一批/内蒙古农业大学</li>
@@ -33,7 +44,7 @@
     <blockquote>
         <p>参加过省级ACM并拿到名次，刷过Leetcode和一些如杭电的ACM网站，一般有思路半小时解决，没思路就慢慢磕。</p>
     </blockquote>
-    <h2>掌握技能</h2>
+    <h3>掌握技能</h3>
     <ul>
         <li>系统：MacOS, Linux ,Windows熟练使用,编写脚本,网络等硬件调配优化，日常三系统切换</li>
         <li>开发语言： Python/c 为主要使用</li>
@@ -42,12 +53,13 @@
         <li>运维：配置维护容器化应用，使用portainer,kubesphere等集群</li>
         <li>插件开发 ：vscode和Firefox的都有做过</li>
     </ul>
-    <h2>经历</h2>
-
+    
+    <h3>经历</h3>
+    <blockquote>
     <p>与他人合作完成过一些工程项目，也接过独立私活，独立承担过商城二次开发，问卷调查，文档管理，沙漠数据处理系统等</p>
-
-    <h3>朔州云时代技术有限公司 （ 2023年6月 - 今 ）</h3>
-    <h4>IDC 云机房运维</h4>
+    </blockquote>
+    <h4>朔州云时代技术有限公司 （ 2023年6月 - 今 ）</h4>
+    <b>IDC 云机房运维</b>
     <ul>
         <li>分配服务器、安装系统、配置服务、服务器 IDC 上架。</li>
         <li>安装调试网络、优化系统及服务，部署各种服务并确保安稳运行。</li>
@@ -56,15 +68,15 @@
         <li>解决日常问题，如硬件（服务器、交换机、硬件、网络）、软件（网络服务、中间件）、各类业务服务故障。</li>
         <li>监控带宽、流量、并发、业务接口等关键资源及访问信息的变化趋势。</li>
     </ul>
-    <h3>朔州市规划和自然资源局 （ 2021年10月 - 2023年6月 ）</h3>
+    <h4>朔州市规划和自然资源局 （ 2021年10月 - 2023年6月 ）</h4>
     <ul>
         <li>负责卫星应用技术中心各项日常工作，以及时对接相关人员</li>
         <li>管理机房及网络整体业务及维护工作</li>
         <li>负责卫片的保密和执行工作，跟进卫片执法的保障及流程</li>
         <li>负责资料整理及编写工作，跟进各项报表及需求</li>
     </ul>
-    <h3>浪潮健康 （ 2020年3月 - 2020年10月 ）</h3>
-    <h4>python 初级开发工程师</h4>
+    <h4>浪潮健康 （ 2020年3月 - 2020年10月 ）</h4>
+    <b>python 初级开发工程师</b>
     <ul>
         <li>负责运维平台的管理调配和监控维护工作</li>
         <li>常见运维系统及操作系统的故障排查和解决</li>
@@ -76,7 +88,7 @@
     <blockquote>
         <p>整体对我个人技术水平有了显著提升，对项目开发也有了自己的一些理解和认识</p>
     </blockquote>
-    <h3>开源项目</h3>
+    <h4>开源项目</h4>
     <ul>
         <li>Shadowsocks：Shadowsocks参与代码的开发及设计讨论</li>
         <li>MyDoOS：基于树莓派3b+的ARM板子做的一个课程设计OS</li>
