改变其中一句话

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li>tel: 18503498358</li>
         </ul>
         <blockquote>
-            <p>此简历原出处为在线简历，网址：<a href="http://cv.grj321.com">http://cv.grj321.com</a> (标蓝的可以点击跳转到指定页面)</p>
+            <p>此简历原出处为在线简历，网址：<a href="http://cv.grj321.com">http://cv.grj321.com</a> (可以点击跳转到指定页面)</p>
         </blockquote>
         <h3>个人信息</h3>
         <ul>
