--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li>个人主页: <a href="http://gaoljhy.github.io">http://gaoljhy.github.io</a></li>
             <li>个人特点：自学能力较强，热爱运动</li>
             <li>获得过全国奖项3个，省级奖项5个</li>
-            <li>有红帽的RHCSA，RHCE证书和物联网初级工程师证书</li>
+            <li>有红帽的RHCSA，RHCE证书和物联网及网络安全国家执业资格证书</li>
         </ul>
         <blockquote>
             <p>参加过省级ACM并拿到名次，刷过Leetcode和一些如杭电的ACM网站，一般有思路半小时解决，没思路就慢慢磕。</p>
@@ -62,8 +62,8 @@
         <blockquote>
             <p>与他人合作完成过一些工程项目，也接过独立私活，独立承担过商城二次开发，问卷调查，文档管理，沙漠数据处理系统等</p>
         </blockquote>
-        <h4>朔州云时代技术有限公司 （ 2023年6月 - 今 ）</h4>
-        <b>IDC 云机房运维</b>
+        <h4>山西云时代技术有限公司 （ 2022年12月 - 今 ）</h4>
+        <b>运维工程师</b>
         <ul>
             <li>分配服务器、安装系统、配置服务、服务器 IDC 上架。</li>
             <li>安装调试网络、优化系统及服务，部署各种服务并确保安稳运行。</li>
@@ -72,15 +72,8 @@
             <li>解决日常问题，如硬件（服务器、交换机、硬件、网络）、软件（网络服务、中间件）、各类业务服务故障。</li>
             <li>监控带宽、流量、并发、业务接口等关键资源及访问信息的变化趋势。</li>
         </ul>
-        <h4>朔州市规划和自然资源局 （ 2021年10月 - 2023年6月 ）</h4>
-        <ul>
-            <li>负责卫星应用技术中心各项日常工作，以及时对接相关人员</li>
-            <li>管理机房及网络整体业务及维护工作</li>
-            <li>负责卫片的保密和执行工作，跟进卫片执法的保障及流程</li>
-            <li>负责资料整理及编写工作，跟进各项报表及需求</li>
-        </ul>
-        <h4>浪潮健康 （ 2020年3月 - 2020年10月 ）</h4>
-        <b>python 初级开发工程师</b>
+        <h4>浪潮健康 （ 2020年7月 - 2021年10月 ）</h4>
+        <b>k8s 运维工程师</b>
         <ul>
             <li>负责运维平台的管理调配和监控维护工作</li>
             <li>常见运维系统及操作系统的故障排查和解决</li>
